--- a/client/public/index.html
+++ b/client/public/index.html
@@ -11,7 +11,7 @@
     />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <title>Book shop App</title>
   </head>
   <body>
